# sdl-bgfx-imgui-starter

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md  camera.hpp  compile-shaders-emscripten.bat  compile-shaders-emscripten.sh  compile-shaders-linux.sh  compile-shaders-macos.sh  compile-shaders-win.bat  compile-shaders.bat  compile-shaders.sh  configure-emscripten.bat  configure-emscripten.sh  configure-make.sh  configure-ninja.bat  configure-ninja.sh  configure-vs-19.bat  configure-vs-22.bat  configure-vs.bat  configure.bat  configure.sh  file-ops.h  main.cpp  run-clang-format.bat
bgfx-emscripten/: bgfx_emscripten_utils.hpp
bgfx-imgui/: README.md  fs_ocornut_imgui.bin.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  vs_ocornut_imgui.bin.h
cmake/: superbuild.cmake
sdl-as-camera/: sdl-as-camera.cpp  sdl-as-camera.h
sdl-imgui/: README.md  imgui_impl_sdl.cpp
shader/: f_simple.sc  v_simple.sc  varying.def.sc
